minor edit in index and css file

--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
     <div class="body">
         <div class="headb">Some random information</div>
         <div class="container">
-            <div>
+            <div class="child">
              <img class="item" src="./image2.jpg">
-             <div>This is some subtext under an illustration or image</div>
+             <div class="text">This is some subtext under an illustration or image</div>
             </div> 
-            <div>
+            <div class="child">
               <img class="item" src="./image3.jpg">
-              <div>This is some subtext under an illustration or image</div>
+              <div class="text">This is some subtext under an illustration or image</div>
             </div> 
-            <div>
+            <div class="child">
                <img class="item" src="./image4.jpg">
-               <div>This is some subtext under an illustration or image</div>
+               <div class="text">This is some subtext under an illustration or image</div>
             </div> 
-            <div>
+            <div class="child">
               <img class="item" src="./image5.jpg">
-              <div>This is some subtext under an illustration or image</div>
+              <div class="text">This is some subtext under an illustration or image</div>
             </div> 
         </div>
     </div>
